--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       dockerfile: "Dockerfile"
     ports:
       - "6379:6379"
+    restart: "always"
     networks:
       - "graphion"
     volumes:
@@ -18,8 +19,9 @@ services:
       - "5432:5432"
     restart: "always"
     environment:
-      POSTGRES_PASSWORD: "${DB_PASSWORD}"
-      POSTGRES_DB: "${DB_DATABASE}"
+      POSTGRES_DB: "${POSTGRES_DB}"
+      POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
+      POSTGRES_UNPRIV_USER: "${POSTGRES_UNPRIV_USER}"
     networks:
       - "graphion"
     volumes:
@@ -29,6 +31,14 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+  reverseproxy:
+    build:
+      context: "./nginx"
+      dockerfile: "Dockerfile"
+    ports:
+      - "8080:8080"
+    networks:
+      - "graphion"
   # scraper:
   #   build:
   #     context: "."
