--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,3 +1,5 @@
 FROM nginx:latest
 
 COPY nginx.conf /etc/nginx/nginx.conf
+COPY certs/cert.pem /root/ssl/cert.pem
+COPY certs/key.pem /root/ssl/key.pem
