--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,23 +1,27 @@
-worker_processes 1;
+# worker_processes 1;
 
 events { worker_connections 1024; }
 
 http {
     server {
-    listen 8080;
+        listen 8443;
+        server_name 10.0.0.2;
+        ssl_certificate         /root/ssl/cert.pem;
+        ssl_certificate_key     /root/ssl/key.pem;
 
-    location / {
-            proxy_pass         http://127.0.0.1:5000;
-            proxy_redirect     off;
-            proxy_http_version 1.1;
-            proxy_cache_bypass $http_upgrade;
-            proxy_set_header   Upgrade $http_upgrade;
-            proxy_set_header   Connection keep-alive;
-            proxy_set_header   Host $host;
-            proxy_set_header   X-Real-IP $remote_addr;
-            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header   X-Forwarded-Proto $scheme;
-            proxy_set_header   X-Forwarded-Host $server_name;
+        location / {
+            proxy_pass          http://localhost:5000;
+            proxy_redirect      off;
+            proxy_http_version  1.1;
+            proxy_cache_bypass  $http_upgrade;
+            proxy_set_header    Upgrade $http_upgrade;
+            proxy_set_header    Connection keep-alive;
+            proxy_set_header    Host $host;
+            proxy_set_header    X-Real-IP $remote_addr;
+            proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header    X-Forwarded-Proto $scheme;
+            proxy_set_header    X-Forwarded-Host $server_name;
+            proxy_set_header    X-Forwarded-Port $server_port;
         }
     }
 }
