--- a/postgresql/Dockerfile
+++ b/postgresql/Dockerfile
@@ -3,4 +3,5 @@ FROM postgres:latest
 # TODO: comment out.
 # COPY ./earthquake.csv /earthquake.csv
 
-COPY ./initialization/ /docker-entrypoint-initdb.d/
+COPY ./scripts/ /docker-entrypoint-initdb.d/
+COPY ./scripts /scripts
