--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: "3"
+name: "graphion"
 services:
   redis:
     build:
@@ -12,22 +13,23 @@ services:
     volumes:
       - "graphion-redis-volume:/data"
     restart: "always"
-  db:
+  postgres:
     build:
       context: "./postgresql"
       dockerfile: "Dockerfile"
-    image: "graphion-db"
+    image: "graphion-postgres"
     environment:
       POSTGRES_DB: "${POSTGRES_DB}"
       POSTGRES_SCHEMA: "${POSTGRES_SCHEMA}"
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
-      POSTGRES_UNPRIV_USER: "${POSTGRES_UNPRIV_USER}"
+      POSTGRES_UNPRIV_USER_SCA_WEB: "${POSTGRES_UNPRIV_USER_SCA_WEB}"
+      POSTGRES_UNPRIV_USER_SCA_WORKER: "${POSTGRES_UNPRIV_USER_SCA_WORKER}"
     networks:
       - "graphion-network"
     ports:
       - "5432:5432"
     volumes:
-      - "graphion-db-volume:/var/lib/postgresql/data/"
+      - "graphion-postgres-volume:/var/lib/postgresql/data/"
     restart: "always"
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U postgres" ]
@@ -64,11 +66,13 @@ services:
       dockerfile: Dockerfile
     image: "graphion-minio-client"
     environment:
-      MINIO_SERVER: "${MINIO_SERVER}"
+      MINIO_HOST: "${MINIO_HOST}"
+      MINIO_PORT: "${MINIO_PORT}"
       MINIO_ROOT_USER: "${MINIO_ROOT_USER}"
       MINIO_ROOT_PASSWORD: "${MINIO_ROOT_PASSWORD}"
       MINIO_UNPRIV_USER: "${MINIO_UNPRIV_USER}"
       MINIO_UNPRIV_PASSWORD: "${MINIO_UNPRIV_PASSWORD}"
+      MINIO_BUCKET: "${MINIO_BUCKET}"
     networks:
       - "graphion-network"
   mailhog:
@@ -110,7 +114,7 @@ services:
   #   ports:
   #     - "5000:5000"
   #   depends_on:
-  #     - "db"
+  #     - "postgres"
 
 networks:
   graphion-network:
@@ -120,7 +124,7 @@ networks:
 volumes:
   graphion-redis-volume:
     name: "graphion-redis-volume"
-  graphion-db-volume:
-    name: "graphion-db-volume"
+  graphion-postgres-volume:
+    name: "graphion-postgres-volume"
   graphion-minio-volume:
     name: "graphion-minio-volume"
